<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <LinearLayout 
        android:id="@+id/bt_one_key_refresh"
        android:layout_width="match_parent"
    	android:layout_height="80dip"
    	android:background="@drawable/bgc_lightgray"
    	android:gravity="center"
        >
        
        <ImageView 
            android:layout_width="33dp"
    		android:layout_height="30dp"
    		android:background="@drawable/icon_camera"
            />
        <TextView 
            android:gravity="center"
            android:layout_width="wrap_content"
    		android:layout_height="40dp"
            android:text="@string/ts_take_and_send_picture"
		android:textSize="25sp"
		android:layout_marginLeft="5dip"
    	android:textColor="@color/white"
            />
        
    </LinearLayout>
    
    
    
     
    <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bgc_darkgray"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            android:text="@string/ts_info" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            android:text="@string/ts_exception" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
           
            android:text="@string/ts_bills" />

        <RadioButton
            android:id="@+id/tab_rb_4"
            style="@style/tab_rb_style"
  
            android:text="@string/ts_set" />
    </RadioGroup>

   
    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
     <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>
</LinearLayout>