<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--<include layout="@layout/smssdk_title_layout" />  -->
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

        <TextView
            android:id="@+id/tv_identify_notify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center"
            android:text="@string/ts_title"
            android:textColor="#45c01a"
            android:textSize="50sp" />

    

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dip"
            android:layout_marginTop="19dip"
            android:background="@drawable/ts_input_bg_focus"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_put_user"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="@string/ts_please_input_user"
                android:singleLine="true"
                 />

            <ImageView
                android:id="@+id/iv_clear_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dip"
                android:background="@drawable/ts_clear_search"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dip"
            android:layout_marginTop="19dip"
            android:background="@drawable/ts_input_bg_focus"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_put_pw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="@string/ts_please_input_pw"
                android:singleLine="true"
                 />

            <ImageView
                android:id="@+id/iv_clear_pw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dip"
                android:background="@drawable/ts_clear_search"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </LinearLayout>

          <CheckBox
              android:id="@+id/cb_remmber_pw"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="10dip"
              android:layout_gravity="right"
              android:text="@string/remmber_pw" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/ts_btn_disenable"
            android:text="@string/ts_login"
            android:textColor="#ffffff"
            android:textSize="15sp" />
       <Button
            android:id="@+id/btn_test"
            android:layout_width="match_parent"
            android:layout_height="48dip"
            android:layout_marginTop="10dip"
            
            android:text="@string/ts_login"
            android:textColor="#ffffff"
            android:textSize="15sp" />
        
    </LinearLayout>

</LinearLayout>