<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <!--<include layout="@layout/smssdk_title_layout" />  -->
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:paddingLeft="16dip"
        android:paddingRight="16dip" >

     

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dip"
            android:layout_marginTop="19dip"
            android:background="@drawable/ts_input_bg_focus"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_put_pw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="#ffffff"
                android:password="true"
                android:hint="@string/ts_input_new_pw"
                android:singleLine="true"
                android:textColor="@color/dark_gray"
                android:maxLength="20"
                 />

            <ImageView
                android:id="@+id/iv_clear_pw"
                android:layout_width="21dip"
                android:layout_height="21dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dip"
                android:background="@drawable/ts_clear_search"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </LinearLayout>
        
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="41dip"
            android:layout_marginTop="19dip"
            android:background="@drawable/ts_input_bg_focus"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_put_pw2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dip"
                android:layout_weight="1"
                android:background="#ffffff"
                android:hint="@string/ts_confirm_new_pw"
                android:singleLine="true"
                android:password="true"
                android:textColor="@color/dark_gray"
                android:maxLength="20"
                 />

            <ImageView
                android:id="@+id/iv_clear_pw2"
                android:layout_width="21dip"
                android:layout_height="21dip"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dip"
                android:background="@drawable/ts_clear_search"
                android:scaleType="fitCenter"
                android:visibility="gone" />
           
        </LinearLayout>
 		<TextView 
   		    android:id="@+id/tv_result"
   		    android:layout_width="match_parent"
            android:layout_height="40dip"
            android:layout_gravity="center_vertical"
            android:textSize="25sp"
            android:textColor="@color/ts_red"
   		    />
   		
 
        <Button
            android:id="@+id/btn_change_pw"
            android:layout_width="match_parent"
            android:layout_height="48dip"
           
            android:background="@drawable/ts_btn_disenable"
            android:text="@string/ts_change_pw"
            android:textColor="#ffffff"
            android:textSize="15sp" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dip"
           android:layout_marginTop="5dip"
            
            android:text="@string/ts_cancel"
            android:textColor="#ffffff"
            android:textSize="15sp" />
     
        
    </LinearLayout>
  
</LinearLayout>
